crates/vega-codegen/tests/compile_errors/negative_second_argument.rs
vega_codegen::algebra!(1, -1);

fn main() {
    eprintln!("This is nothing");
}
